--- a/ln_js/task/task_01/index.html
+++ b/ln_js/task/task_01/index.html
@@ -9,9 +9,11 @@
             var oBtn = document.getElementById('btn');
             var oShow = document.getElementById('show');
             var oSet = document.querySelector('.set');
+            var oBg = document.querySelector('.bg');
 
             oBtn.onclick =function () {
                 oSet.style.display = 'block';
+                oBg.style.display = 'block';
             };
             var oRed = document.querySelector('.red');
             oRed.onmouseover = function () {
@@ -58,6 +60,7 @@
             var oConfirm = document.querySelector('.confirm');
             oConfirm.onclick = function () {
                 oSet.style.display = 'none';
+                oBg.style.display = 'none';
             };
         };
     </script>
@@ -69,6 +72,7 @@
         <input id="btn" type="button" value="点击设置">
     </div>
     <div id="show"></div>
+    <div class="bg"></div>
     <div class="set">
         <div class="main main_top_20">
             <span>请选择背景色&nbsp;:&nbsp;</span>
