--- a/ln_js/task/task_02/index.html
+++ b/ln_js/task/task_02/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>task_02</title>
+    <title>图片切换</title>
     <link href="style/index.css" rel="stylesheet" type="text/css">
     <script>
         window.onload = function () {
